@startuml

title __DTO's Class Diagram__\n

  namespace  {
    namespace om.example.piper.piperchat {
      namespace DTO {
        class com.example.piper.piperchat.DTO.RoomDTO {
            - UpdatedAt : Date
            - admin : String
            - createdAt : Date
            - createdBy : String
            - isARequest : Boolean
            - lastMessageAt : Date
            - members : List<User>
            - messages : List<Message>
            - name : String
            - participants : List<String>
            - roomId : Long
            + RoomDTO()
            + equals()
            + getAdmin()
            + getCreatedAt()
            + getCreatedBy()
            + getIsARequest()
            + getLastMessageAt()
            + getMembers()
            + getMessages()
            + getName()
            + getParticipants()
            + getRoomId()
            + getRoomType()
            + getUpdatedAt()
            + hashCode()
            + setAdmin()
            + setCreatedAt()
            + setCreatedBy()
            + setIsARequest()
            + setLastMessageAt()
            + setMembers()
            + setMessages()
            + setName()
            + setParticipants()
            + setRoomId()
            + setRoomType()
            + setUpdatedAt()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.piper.piperchat {
      namespace DTO {
        class com.example.piper.piperchat.DTO.UserDTO {
            - UpdatedAt : Date
            - confirmPassword : String
            - createdAt : Date
            - email : String
            - fullName : String
            - password : String
            - rooms : List<Room>
            - userId : long
            - username : String
            + UserDTO()
            + equals()
            + getConfirmPassword()
            + getCreatedAt()
            + getEmail()
            + getFullName()
            + getPassword()
            + getProfile()
            + getRooms()
            + getUpdatedAt()
            + getUserId()
            + getUsername()
            + hashCode()
            + setConfirmPassword()
            + setCreatedAt()
            + setEmail()
            + setFullName()
            + setPassword()
            + setProfile()
            + setRooms()
            + setUpdatedAt()
            + setUserId()
            + setUsername()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  com.example.piper.piperchat.DTO.RoomDTO o-- com.example.piper.piperchat.model.RoomType : roomType
  com.example.piper.piperchat.DTO.UserDTO o-- com.example.piper.piperchat.model.Profile : profile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
